[package]
name = "sled-vs-rocksdb"
version = "0.1.0"
authors = ["Pedro Bittencorut Arruda <pedrobittencourt@yahoo.com.br>"]
edition = "2018"

[profile.release]
lto = "thin"
debug = true

[dependencies]
sled = { version = "0.31.0", features = ["compression"] }

jemallocator = "0.3.2"

# rocksdb
[dependencies.rocksdb]
version = "0.13.0"
# git = "https://github.com/tikv/rust-rocksdb.git"
# rev = "6191b41497ee35234b1a2c1bbd6691787fe65537"

